style(TechList): prevent user from selecting tech items on mobile and tablet

--- a/src/components/Home/AboutSection/TechList/TechList.module.scss
+++ b/src/components/Home/AboutSection/TechList/TechList.module.scss
@@ -26,6 +26,7 @@
 @include m.small {
   .techList {
     gap: 1px 14px;
+    user-select: none;
   }
 }
 
